Prevent empty space from appearing next to pictures on mobile

--- a/app/javascript/stylesheets/redesign/_picture.scss
+++ b/app/javascript/stylesheets/redesign/_picture.scss
@@ -5,10 +5,10 @@
     margin-top: var(--size-4);
 
     @media only screen and (max-width: $mobile-max-plus-padding) {
-      max-width: calc(100vw - $padding-both-sides);
+      max-width: 100vw;
 
       img {
-        max-width: calc(100vw - $padding-both-sides);
+        max-width: 100vw;
         object-fit: scale-down;
       }
     }
